--- a/.env.e2e
+++ b/.env.e2e
@@ -1,3 +1,4 @@
+VUE_APP_FIREBASE_PROJECT_ID="pairist-test"
 VUE_APP_FIREBASE_API_KEY="AIzaSyC4IhaLy_VyCruDfhRJ7NQn_47nxnTnotA"
 VUE_APP_FIREBASE_AUTH_DOMAIN="pairist-test.firebaseapp.com"
 VUE_APP_FIREBASE_URL="https://pairist-test.firebaseio.com"
