--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
+VUE_APP_FIREBASE_PROJECT_ID="pairist-9de4d"
 VUE_APP_FIREBASE_API_KEY="AIzaSyCJwO1t81W7vhpDOL9rey23Q90VjruNkD4"
 VUE_APP_FIREBASE_AUTH_DOMAIN="pairist-9de4d.firebaseapp.com"
 VUE_APP_FIREBASE_URL="https://pairist-9de4d.firebaseio.com"
