--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "vuedraggable": "^2.17.0",
     "vuetify": "^1.4.6",
     "vuex": "^3.1.0",
-    "vuexfire": "^2.3.0"
+    "vuexfire": "^3.0.0-alpha.14"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
